--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <div style="display: flex; width: 100%; height: 100%;top: 0;left: 0;overflow: hidden;position: absolute;">    
                        
             <div style="flex: 3;display: flex;flex-direction: column;">
-                <div style="width: 100%;background-color: #5569dc;height: 10vh;display: flex;justify-content: center;align-items: center;color: white;">
-                    <a style="margin: 1rem;"> <label>About</label></a>
-                    <a style="margin: 1rem;"><label>Education & Experience</label></a>
+                <div style="width: 100%;background-color: #5569dc;height: 5rem;display: flex;justify-content: center;align-items: center;color: white;">
+                    <a href="#about" style="margin: 1rem;"> <label>About</label></a>
+                    <a href="#education" style="margin: 1rem;"><label>Education</label></a>
+                    <a href="#experience" style="margin: 1rem;"><label>Experience</label></a>
                     <a style="margin: 1rem;"><label>Skills & Languages</label></a>
                     <a style="margin: 1rem;"><label>Projects</label></a>
                 </div>
@@ -73,105 +74,89 @@
         
     </header>
 
-    <main style="background-color: white;padding-top: 2vh;">
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-            <p>This is the home section.</p>
-        </section>
-        <section id="about">
+    <main style="background-color: white;padding: 0;word-wrap: break-word;white-space: normal;">
+        <section id="about" style="background-color: #eef0fb;padding: 10vh 10vw;">
             <h2>About</h2>
-            <p>This is the about section.</p>
+            <p>MY BACKGROUND</p>
+            <p>Hi there!, I'm a senior software engineer, primarily working in the .NET ecosystem. Things I am interested in: C# and .NET,
+                Software engineering and architecture, Distributed systems and how to build them, Databases and optimization
+                techniques, Career and personal growth, One of my goals is to be part of the leading frontier in software solutions. I have
+                achieved the first step to my goal by working for the leading software company in Iraq (Awrosoft). Looking forward to
+                becoming a leader on international stage. If this sounds interesting, let's connect</p>
         </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>This is the contact section.</p>
+        <section id="education" style="padding: 10vh 10vw;">
+            <h2>Education</h2>
+            <p>WHAT I'VE LEARNED</p>
+            <p>2018 - 2022</p>
+            <p>Cordoba Private University - Al Qamishli, Syria</p>
+            <p>Bachelor of Engineering; Electrical, Electronics and Communications Engineering</p>
+            <p>GPA: 2.83/4.0</p>
+        </section>
+        <section id="experience" style="padding: 10vh 10vw;">
+            <h2>Experience</h2>
+            <p>WHERE I'VE WORKED</p>
+            <div>
+                <p>Jun. 2023 - Present</p>
+                <p>Awrosoft - Erbil, Iraq</p>
+                <p>Full-Stack Developer</p>
+                <p>Worked on many heigh-scale systems that services hundreds of thousands of users. Responsibilities:</p>
+                <ol>
+                    <li>Maintain and add features to Hevra ERP system which includes solutions for deferent enterprise management
+                        sectors: Accounting, HR, Workflow, Attendance, Payroll, Quality assurance and Project management.</li>
+                    <li>Develop and maintain scalable, secure and heigh performant systems for the government.</li>
+                    <li>Deal with Microservices, SaaS and Docker on daily basis.</li>
+                </ol>
+                <p>Technology stacks: .NET, SQL Server, Docker, SaaS, Microservices</p>
+            </div>
+            <div>
+                <p>Sep. 2022 - Feb. 2023</p>
+                <p>Excel Technologies Ltd. - Remot</p>
+                <p>Back-End Developer</p>
+                <p>Worked remotely on one project. Responsibilities:</p>
+                <ol>
+                    <li>Architect and build the back end from scratch for a new Visitor Management System (VMS) that resembles the
+                        existing Hikvision VMS. The systems integrates numerous Hikvision surveillance devices into on system that is able to
+                        monitor and track humans and vehicles.</li>
+                </ol>
+                <p>Technology stacks: .NET Core, SQL Server, Hikvision surveillance devices.</p>
+            </div>
+            <div>
+                <p>Jun. 2020 - Aug. 2022</p>
+                <p>AB Techno - Al Qamishli, Syrai</p>
+                <p>Junior Full-Stack Developer</p>
+                <p>Worked on several projects for the government. Responsibilities:</p>
+                <ol>
+                    <li>Build and maintain networking applications that are capable of monitoring, detecting failures and
+                        reporting.</li>
+                    <li>Collaborate with team members to architect and develop large software solutions to automize
+                        government work, these systems consisted of APIs, Client applications and large databases.</li>
+                </ol>
+                <p>Technology stacks: .NET , SQL server, Networking protocols.</p>
+            </div>
+            <div>
+                <p>Mar. 2022 - Jun. 2022</p>
+                <p>Netween LLC. - Remot</p>
+                <p>Junior Full-Stack Developer</p>
+                <p>This was a freelance position, Netween LLC was a new startup then, and we were a team from around the world, we
+                    were working on a decentralized social media platform.</p>
+            </div>
+        </section>
+        <section id="SkillsAndLanguages" style="padding: 10vh 10vw;">
+            <h2>Skills & Languages</h2>
+            <p>WHAT I BRING TO THE TABLE</p>
+            <table>
+                <tr>
+                    <td style="min-width: 20vw;">.NET Core</td>
+                    <td>
+                        <div style="display: flex;align-items: center;">
+                            <div style="display: flex;align-items: center;width: 300px;height: 1px;background-color: #cad4e8;position: relative;margin-right: 10px;">
+                                <div style="width: 0;height: 3px;background-color: #5569dc;transition: width 2s;" id="progress-bar"></div>
+                            </div>
+                            <span id="percentage-value">0%</span>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </section>
     </main>
     <footer>
