--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </div>
                         <div id="header-inroduction-text-container-div-2">
                             <p class="jost-normal-300 font-size-35" style="margin-bottom: 0rem; padding: 0rem;">HELLO, I'M</p>
-                            <h1 class="playfair-display-normal-1000 font-size-80" style="margin-bottom: 1rem;margin-top: 0rem;padding: 0rem;text-align: center;">Ahmad Arab</h1>
+                            <h1 id="ahmad-arab-text" class="playfair-display-normal-1000 font-size-80">Ahmad Arab</h1>
                             <p class="playfair-display-italic-400 font-size-22" style="margin-top: 0rem;">Full stack developer</p>
                         </div>
                         
